--- a/Downloads/techsmvp-KaungFixed/src/main/resources/application.properties
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/application.properties
@@ -12,9 +12,9 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/team2ad?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=yunting
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
