--- a/Downloads/techsmvp-KaungFixed/src/main/resources/application.properties
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/team2ad?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=yunting
+spring.datasource.password=strongpassword
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
