--- a/Downloads/techsmvp-KaungFixed/src/main/resources/application.properties
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/team2ad?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=yunting
+spring.datasource.password=123456
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
@@ -30,5 +30,12 @@ api.response-codes.notFound.desc=NOT_FOUND
 spring.security.oauth2.client.registration.google.client-id=660598810419-3mbcvao6nde7i0ccja969vqnc3o917eo.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=legendarylong303@gmail.com
+spring.mail.password=axdgbjuslebnthzd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
