--- a/Downloads/techsmvp-KaungFixed/src/main/resources/application.properties
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/application.properties
@@ -10,9 +10,9 @@
 # spring.jpa.hibernate.ddl-auto=create-drop
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/team2ad?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/team2adproject?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=yunting
+spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
